--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,44 @@
-apply plugin: 'cpp'
-
-model {
-    buildTypes {
-        debug
-        release
+buildscript {
+    repositories {
+        jcenter()
+        
     }
-
-    platforms {
-        x86 {
-            architecture "x86"
-        }
-        x64 {
-            architecture "x86_64"
-        }
-        itanium {
-            architecture "ia-64"
-        }
-    }
-
-    flavors {
-        community
-        enterprise
-    }
-
-    components {
-        hello(NativeLibrarySpec) {
-            binaries.all {
-                cppCompiler.define "HELLO_EXPORT"
-                if (flavor == flavors.enterprise) {
-                    cppCompiler.define "ENTERPRISE"
-                }
-            }
-        }
-        main(NativeExecutableSpec) {
-            binaries.all {
-                lib library: "hello"
-            }
-        }
+    dependencies {
+        //Check for the latest version here: http://plugins.gradle.org/plugin/com.jfrog.artifactory
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4+"
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.13'
+allprojects {
+    apply plugin: "com.jfrog.artifactory"
+}
+
+artifactory {
+    contextUrl = "${artifactory_contextUrl}"   //The base Artifactory URL if not overridden by the publisher/resolver
+    publish {
+        repository {
+            repoKey = 'gradle'
+            username = "${artifactory_user}"
+            password = "${artifactory_password}"
+            maven = true
+            ivy {
+                ivyLayout = '[organization]/[module]/ivy-[revision].xml'
+                artifactLayout = '[organization]/[module]/[revision]/[module]-[revision](-[classifier]).[ext]'
+                mavenCompatible = false
+            }
+        }
+    }
+    resolve {
+        repository {
+            repoKey = 'libs-release'
+            username = "${artifactory_user}"
+            password = "${artifactory_password}"
+            maven = true
+            ivy {
+                ivyLayout = '[organization]/[module]/ivy-[revision].xml'
+                artifactLayout = '[organization]/[module]/[revision]/[module]-[revision](-[classifier]).[ext]'
+                mavenCompatible = false
+            }
+        }
+    }
 }
